--- a/Arduchuni.Server/MainWindow.xaml
+++ b/Arduchuni.Server/MainWindow.xaml
@@ -5,13 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Arduchuni.Server"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Name="ThisWindow" Closing="ThisWindow_Closing"
+        Title="Arduchuni" Height="450" Width="800">
+    <Window.Resources>
+        <Style TargetType="TextBox">
+            <Setter Property="FontSize" Value="24"></Setter>
+            <Setter Property="VerticalAlignment" Value="Center"></Setter>
+            <Setter Property="Margin" Value="0 0 12 0"></Setter>
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="MinWidth" Value="100"></Setter>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200"></ColumnDefinition>
+            <ColumnDefinition Width="300"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0">
+        <Grid Grid.Column="0" DataContext="{Binding ElementName=ThisWindow}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
@@ -20,12 +31,22 @@
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
-            <local:SensorView x:Name="Sensor0" Grid.Row="0"></local:SensorView>
-            <local:SensorView x:Name="Sensor1" Grid.Row="1"></local:SensorView>
-            <local:SensorView x:Name="Sensor2" Grid.Row="2"></local:SensorView>
-            <local:SensorView x:Name="Sensor3" Grid.Row="3"></local:SensorView>
-            <local:SensorView x:Name="Sensor4" Grid.Row="4"></local:SensorView>
-            <local:SensorView x:Name="Sensor5" Grid.Row="5"></local:SensorView>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"></ColumnDefinition>
+                <ColumnDefinition Width="100"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <local:SensorView x:Name="Sensor0" Grid.Row="0" Grid.Column="0"></local:SensorView>
+            <local:SensorView x:Name="Sensor1" Grid.Row="1" Grid.Column="0"></local:SensorView>
+            <local:SensorView x:Name="Sensor2" Grid.Row="2" Grid.Column="0"></local:SensorView>
+            <local:SensorView x:Name="Sensor3" Grid.Row="3" Grid.Column="0"></local:SensorView>
+            <local:SensorView x:Name="Sensor4" Grid.Row="4" Grid.Column="0"></local:SensorView>
+            <local:SensorView x:Name="Sensor5" Grid.Row="5" Grid.Column="0"></local:SensorView>
+            <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Config.Thresholds[0], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+            <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Config.Thresholds[1], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+            <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Config.Thresholds[2], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+            <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Config.Thresholds[3], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+            <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding Config.Thresholds[4], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+            <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding Config.Thresholds[5], Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
         </Grid>
         <StackPanel Orientation="Vertical" Grid.Column="1">
             <DockPanel>
