--- a/Arduchuni.Server/SensorView.xaml
+++ b/Arduchuni.Server/SensorView.xaml
@@ -20,6 +20,10 @@
         <Canvas Width="40" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Ellipse Width="32" Height="32" Canvas.Top="4" Canvas.Left="4" Fill="{Binding Active, Converter={StaticResource ActiveConverter}}"></Ellipse>
         </Canvas>
-        <TextBlock HorizontalAlignment="Left" Margin="8 0" VerticalAlignment="Center" Grid.Column="1" Text="{Binding Value}" FontSize="24"></TextBlock>
+        <StackPanel Orientation="Horizontal" Grid.Column="1">
+            <TextBlock HorizontalAlignment="Left" Margin="8 0" VerticalAlignment="Center" Text="{Binding Value}" FontSize="24"></TextBlock>
+            <TextBlock HorizontalAlignment="Left" Margin="8 0" VerticalAlignment="Center" Text="{Binding Difference}" 
+                       Foreground="{Binding Active, Converter={StaticResource ActiveConverter}}" FontSize="16"></TextBlock>
+        </StackPanel>
     </Grid>
 </UserControl>
